# unmaintainable.systems

./: .cspell.json  .gitignore  IDEAS.md  README.md  flake.nix
generator/: cabal.project  generator.cabal
generator/src/: Main.hs
site/posts/: 2020-09-22-hola-mundo.md
