cabal-version:       3.6

name:                generator
version:             0.1.0.0
build-type:          Simple
license:             BSD-3-Clause
license-file:        LICENSE

executable generator
  default-language:  Haskell2010
  main-is:           Main.hs
  hs-source-dirs:    src
  build-depends:     base == 4.*
                   , hakyll == 4.15.*
                   , filepath >= 1.0
                   , pandoc >= 2.11
                   , slugger >= 0.1.0.2
                   , text >= 1 && < 3
  ghc-options:     -Wall
                   -Wcompat
                   -Widentities
                   -Wincomplete-record-updates
                   -Wincomplete-uni-patterns
                   -Wpartial-fields
                   -Wredundant-constraints
                   -O2
                   -threaded
                   -rtsopts
                   -with-rtsopts=-N
